src/test/deca/syntax/invalid/notprovided/test_flottant.deca
// Description:
//    tests de programme lexicalement incorrect.
//
// Resultats:
//    
// Historique:
//    cree le 01/01/2017

float x = 124561341.1e10

float y = 0x12.5

0X2.0p3

